--- a/charts/mccp/templates/clusters-service/network-policy.yaml
+++ b/charts/mccp/templates/clusters-service/network-policy.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.networkPolicy.enabled }}
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
@@ -14,3 +15,4 @@ spec:
       app: clusters-service
   policyTypes:
   - Ingress
+{{- end }}
