--- a/charts/mccp/templates/cluster-bootstrap-controller/deployment.yaml
+++ b/charts/mccp/templates/cluster-bootstrap-controller/deployment.yaml
@@ -3,6 +3,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
+    app.kubernetes.io/name: mccp
+    app.kubernetes.io/component: cluster-bootstrap-controller
     control-plane: controller-manager
   name: {{ include "mccp.fullname" . }}-cluster-bootstrap-controller
   namespace: {{ .Release.Namespace | quote }}
@@ -10,10 +12,14 @@ spec:
   replicas: 1
   selector:
     matchLabels:
+      app.kubernetes.io/name: mccp
+      app.kubernetes.io/component: cluster-bootstrap-controller
       control-plane: controller-manager
   template:
     metadata:
       labels:
+        app.kubernetes.io/name: mccp
+        app.kubernetes.io/component: cluster-bootstrap-controller
         control-plane: controller-manager
     spec:
       containers:
