--- a/charts/mccp/templates/cluster-bootstrap-controller/service.yaml
+++ b/charts/mccp/templates/cluster-bootstrap-controller/service.yaml
@@ -3,6 +3,8 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
+    app.kubernetes.io/name: mccp
+    app.kubernetes.io/component: cluster-bootstrap-controller
     control-plane: controller-manager
   name: cluster-bootstrap-controller-metrics-service
   namespace: {{ .Release.Namespace | quote }}
@@ -13,5 +15,7 @@ spec:
     protocol: TCP
     targetPort: https
   selector:
+    app.kubernetes.io/name: mccp
+    app.kubernetes.io/component: cluster-bootstrap-controller
     control-plane: controller-manager
 {{- end }}
