Fix acceptance tests after removal of cluster name from helmrelease name

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -164,6 +164,7 @@ jobs:
       WGE_GITLAB_CLIENT_SECRET: ${{ secrets.WGE_ON_PREM_GITLAB_CLIENT_SECRET }}
 
   smoke-test-results:
+    if: ${{ always() }}
     needs: [smoke-tests-github, smoke-tests-gitlab, smoke-tests-gitlab-on-prem]
     uses: ./.github/workflows/publish-test-results.yaml
     with:
